test/should_fail/inh_model_001.gm
model inh_model_001;

node class A extends A;
